Adjust about page to ensure text does not overlap.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -511,17 +511,6 @@ td, th {
 
 /* Site about */
 
- .about-image{
-	position: relative;
-	overflow:hidden;
-}
-.about-text{
-	position: absolute;
-	top: 0px;
-	right: 60px;
-	width: 55%;
-}
-
 .about-venues{
 	position:relative;
 }
